example/errors/parser/expected_identifier.box
set mut true: int = 5;
